fixed and customized button +  updated zoom level and map center

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div id="wrapper">
-        <div id="map" class="div1"></div>
-        <div id="picture" class="div2"><img id="poza1"></div>
-        <div id="button1" class="div3">
-            <button id = 'btn' onclick="changeMode()">Alert</button>
+        <div id="map" class="div1">
+            <div id="button1" class="div3">
+                <button id = 'btn' onclick="changeMode()">M</button>
+            </div>
         </div>
+        <div id="picture" class="div2"><img id="poza1"></div>
     </div>
     <script type="text/javascript" src="mapa2.js"></script>
 </body>
