got rid of unnecessary js file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </div>
         <div id="picture" class="div2"><img id="poza1"></div>
     </div>
-    <script type="text/javascript" src="mapa2.js"></script>
+    <script type="text/javascript" src="mapa.js"></script>
 </body>
 </html>
