added feature to update the og map interactively with the map editor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="mapa.css">
     <script src="geojson.js"></script>
     <script src="test.js"></script>
+    <script type="text/javascript" src="mapeditor.js" defer></script>
 </head>
 <body>
     <div id="wrapper">
@@ -19,6 +20,7 @@
         </div>
         <div id="picture" class="div2"><img height="570" width="570" id="poza1"></div>
     </div>
-    <script type="text/javascript" src="mapa.js"></script>
+    <script type="text/javascript" src="mapa.js" defer></script>
+    
 </body>
 </html>
