--- a/mapeditor.html
+++ b/mapeditor.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="test.js"></script>
+    <script src="mapa.js" defer></script>
 
 </head>
 <body>
-    <div id="map"><button id="button">G</button></div>
-    <script src="mapeditor.js" type="text/javascript"></script>
+    <div id="map2"><button id="button">G</button></div>
+    <script src="mapeditor.js" type="text/javascript" defer></script>
 </body>
 </html>
