closes #8; show image in fullscreen if onclicked

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button id = 'btn' onclick="changeMode()">M</button>
             </div>
         </div>
-        <div id="picture" class="div2"><img height="570" width="570" id="poza1"></div>
+        <div id="picture" class="div2"><img onclick="openImage()" height="570" width="570" id="poza1"></div>
     </div>
     <script type="text/javascript" src="mapa.js" defer></script>
     
