added links to better access the two pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="button1" class="div3">
                 <button id = 'btn' onclick="changeMode()">M</button>
             </div>
+            <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div>
         </div>
         <div id="picture" class="div2"><img onclick="openImage()" height="570" width="570" id="poza1"></div>
     </div>
