--- a/mapeditor.html
+++ b/mapeditor.html
@@ -15,7 +15,10 @@
 
 </head>
 <body>
-    <div id="map2"><button id="button">G</button></div>
+    <div id="map2">
+        <button id="button">G</button>
+        <div id="map-link"><a href="./index.html" target="_blank">back to map</a></div>
+    </div>
     <script src="mapeditor.js" type="text/javascript" defer></script>
 </body>
 </html>
