styled buttons with icons and added download button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <div id="map" class="div1">
             <div id="button1" class="div3">
-                <button id = 'btn' onclick="changeMode()">M</button>
+                <button id = 'btn' onclick="changeMode()"></button>
             </div>
             <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div>
         </div>
