--- a/mapeditor.html
+++ b/mapeditor.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <div id="map2">
-        <button id="button">G</button>
+        <button id="button"></button>
+        <button id="download-button"></button>
         <div id="map-link"><a href="./index.html" target="_blank">back to map</a></div>
     </div>
     <script src="mapeditor.js" type="text/javascript" defer></script>
