added tooltips to buttons

--- a/public/mapeditor.html
+++ b/public/mapeditor.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <div id="map2">
-        <button id="button"></button>
-        <button id="download-button"></button>
+        <button id="button" title="Save to map"></button>
+        <button id="download-button" title="Download geojson file"></button>
         <div id="map-link"><a href="./index.html" target="_blank">back to map</a></div>
         <div id="upload-link"><a href="./upload.html" target="_blank">upload images</a></div>
     </div>
