changed position of send image button

--- a/public/upload.html
+++ b/public/upload.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <form method="post" action="/upload" enctype="multipart/form-data">
-        <input type="file" name="image"><br>
+        <input type="file" name="image">
         <input type="submit">
     </form>
     <div id="div-list-uploaded">
