--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             </div> -->
             <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div>
         </div>
-        <div id="picture" class="div2"><img onclick="openImage()" height="570" width="570" id="poza1"></div>
+        <div id="picture" class="div2"><img onclick="openImage()" id="poza1"></div>
     </div>    
 </body>
 </html>
