--- a/public/upload.html
+++ b/public/upload.html
@@ -7,18 +7,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="upload.css" rel="stylesheet">
     <script src="upload.js" defer></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
     <title>Upload Image</title>
 </head>
 <body>
-    <form method="post" action="/upload" enctype="multipart/form-data">
+    <!-- <form method="post" action="/upload" enctype="multipart/form-data">
         <input type="file" name="image">
         <input type="submit">
-    </form>
+    </form> -->
     <div id="div-list-uploaded">
         <p>List of uploaded images </p>
         <ul id="ul"></ul>
     </div>
-    
+
+    <button id="upload_widget" class="cloudinary-button">Upload files</button>    
     <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">back to mapeditor</a></div>
+    <div id="cloudinary-link"><a href="https://cloudinary.com/console/c-937016729a695b78a7c15412a85b13/media_library/folders/c1554491ad096acbdd4e5875fefb6b6d91" target="_blank">cloudinary</a></div>
 </body>
 </html>
