--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
             </div> -->
             <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div>
         </div>
-        <div id="picture" class="div2"><img onclick="openImage()" id="poza1"></div>
+        <div id="picture" class="div2">
+            <img onclick="openImage()" id="poza1">
+            <img src="./icons/x.svg" onclick="changeMode()" alt="" id="xicon">
+        </div>
     </div>    
 </body>
 </html>
