adding source parameter

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
         </div>
         <div id="picture" class="div2">
             <img onclick="openImage()" id="poza1">
+            <div id="imageDescription1"></div>
+            <div id="imageDescription2"></div>
             <img src="./icons/x.svg" onclick="changeMode()" alt="" id="xicon">
         </div>
     </div>    
