deleting redirection links

--- a/public/mapeditor.html
+++ b/public/mapeditor.html
@@ -26,7 +26,7 @@
             <input type="file" id="upload">
         </div>
         
-        <div id="map-link"><a href="./index.html" target="_blank">back to map</a></div>
+        <!-- <div id="map-link"><a href="./index.html" target="_blank">back to map</a></div> -->
     </div>
 </body>
 </html>
