--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <!-- <div id="button1" class="div3">
                 <button id = 'btn' title="Change mode" onclick="changeMode()"></button>
             </div> -->
-            <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div>
+            <!-- <div id="mapeditor-link"><a href="./mapeditor.html" target="_blank">open mapeditor</a></div> -->
         </div>
         <div id="picture" class="div2">
             <img onclick="openImage()" id="poza1">
